[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hn-tech-signal-mcp"
version = "0.1.0"
description = "MCP server for tech & AI intelligence – aggregates HackerNews, arXiv, Lobste.rs and GitHub. No API key required."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "malkreide" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "hackernews",
    "arxiv",
    "tech-intelligence",
    "ai-research",
    "lobsters",
    "github",
    "swiss-public-data-mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
hn-tech-signal-mcp = "hn_tech_signal_mcp.server:main"

[project.urls]
Homepage = "https://github.com/malkreide/hn-tech-signal-mcp"
Repository = "https://github.com/malkreide/hn-tech-signal-mcp"
Issues = "https://github.com/malkreide/hn-tech-signal-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hn_tech_signal_mcp"]

[tool.hatch.version]
path = "src/hn_tech_signal_mcp/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["live: marks tests as requiring live API access (deselect with '-m not live')"]
